[tool.poetry]
name = "molotov-test"
version = "0.1.0"
description = ""
authors = ["Michael Cooper <mythmon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
molotov = "^2.1"
Faker = "^8.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
